K8/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: auth-service
    name: auth-service
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: auth-service
    template:
        metadata:
            labels:
                io.kompose.service: auth-service
        spec:
            containers:
                - env:
                      - name: EUREKA_URL
                        value: http://eureka:8761/eureka/
                      - name: RABBITMQ_PORT
                        value: '5672'
                      - name: RABBITMQ_PW
                        value: secret
                      - name: RABBITMQ_URL
                        value: rabbitmq
                      - name: RABBITMQ_USER
                        value: myuser
                      - name: EUREKA_INSTANCE_PREFER_IP_ADDRESS
                        value: 'true'
                      - name: EUREKA_INSTANCE_HOSTNAME
                        value: auth-service
                      - name: DATABASE_URL
                        valueFrom:
                            secretKeyRef:
                                name: auth-service-secrets
                                key: DATABASE_URL
                      - name: DATABASE_USERNAME
                        valueFrom:
                            secretKeyRef:
                                name: auth-service-secrets
                                key: DATABASE_USERNAME
                      - name: DATABASE_PASSWORD
                        valueFrom:
                            secretKeyRef:
                                name: auth-service-secrets
                                key: DATABASE_PASSWORD
                      - name: JWT_SECRET
                        valueFrom:
                            secretKeyRef:
                                name: auth-service-secrets
                                key: JWT_SECRET
                  image: mingli99/authservice:latest
                  name: auth-service
                  ports:
                      - containerPort: 8087
                        protocol: TCP
            restartPolicy: Always
