K8/demo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: demo-api
    name: demo-api
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: demo-api
    template:
        metadata:
            labels:
                io.kompose.service: demo-api
        spec:
            containers:
                - env:
                      - name: EUREKA_URL
                        value: http://eureka:8761/eureka/
                      - name: RABBITMQ_PORT
                        value: '5672'
                      - name: RABBITMQ_PW
                        value: secret
                      - name: RABBITMQ_URL
                        value: rabbitmq
                      - name: RABBITMQ_USER
                        value: myuser
                      - name: EUREKA_INSTANCE_PREFER_IP_ADDRESS
                        value: 'true'
                      - name: EUREKA_INSTANCE_HOSTNAME
                        value: demo-api
                  image: mingli99/demo-api:latest
                  name: demo-api
                  ports:
                      - containerPort: 9090
                        protocol: TCP
                  resources:
                      requests:
                          cpu: '250m'
                          memory: '250Mi'
                      limits:
                          cpu: '500m'
                          memory: '500Mi'
            restartPolicy: Always
