K8/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: frontend
    name: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: frontend
    template:
        metadata:
            labels:
                io.kompose.service: frontend
        spec:
            containers:
                - env:
                      - name: REACT_APP_GATEWAY_URL
                        value: http://gateway:8085
                  image: mingli99/frontend:latest
                  name: frontend
                  ports:
                      - containerPort: 80
                        protocol: TCP
                  resources:
                      requests:
                          cpu: '250m'
                          memory: '250Mi'
                      limits:
                          cpu: '500m'
                          memory: '500Mi'
            restartPolicy: Always
