K8/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: rabbitmq
    name: rabbitmq
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: rabbitmq
    template:
        metadata:
            labels:
                io.kompose.service: rabbitmq
        spec:
            containers:
                - args:
                      - bash
                      - -c
                      - rabbitmq-plugins enable --offline rabbitmq_mqtt && rabbitmq-server
                  image: rabbitmq:management
                  name: rabbitmq
                  ports:
                      - containerPort: 5672
                        protocol: TCP
                      - containerPort: 15672
                        protocol: TCP
                      - containerPort: 1883
                        protocol: TCP
            restartPolicy: Always
