K8/song-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: song-service
    name: song-service
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: song-service
    template:
        metadata:
            labels:
                io.kompose.service: song-service
        spec:
            containers:
                - env:
                      - name: EUREKA_URL
                        value: http://eureka:8761/eureka/
                      - name: RABBITMQ_PORT
                        value: "5672"
                      - name: RABBITMQ_PW
                        value: secret
                      - name: RABBITMQ_URL
                        value: rabbitmq
                      - name: RABBITMQ_USER
                        value: myuser
                  image: mingli99/song-service:latest
                  name: song-service
                  ports:
                      - containerPort: 9091
                        protocol: TCP
            restartPolicy: Always
