K8/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: user-service
    name: user-service
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: user-service
    template:
        metadata:
            labels:
                io.kompose.service: user-service
        spec:
            containers:
                - env:
                      - name: EUREKA_URL
                        value: http://eureka:8761/eureka/
                      - name: RABBITMQ_PORT
                        value: '5672'
                      - name: RABBITMQ_PW
                        value: secret
                      - name: RABBITMQ_URL
                        value: rabbitmq
                      - name: RABBITMQ_USER
                        value: myuser
                      - name: EUREKA_INSTANCE_PREFER_IP_ADDRESS
                        value: 'true'
                      - name: EUREKA_INSTANCE_HOSTNAME
                        value: user-service
                      - name: DATABASE_URL
                        value: jdbc:postgresql://ep-winter-water-a9rvco0t-pooler.gwc.azure.neon.tech/userservice-db?sslmode=require
                      - name: DATABASE_USERNAME
                        value: neondb_owner
                      - name: DATABASE_PASSWORD
                        value: npg_xeRz6bYNUo0G
                  image: mingli99/userservice:latest
                  name: user-service
                  ports:
                      - containerPort: 8087
                        protocol: TCP
            restartPolicy: Always
