K8/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        io.kompose.service: auth-service
    name: auth-service
spec:
    ports:
        - name: '8087'
          port: 8087
          targetPort: 8087
    selector:
        io.kompose.service: auth-service
