K8/demo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        io.kompose.service: demo-api
    name: demo-api
spec:
    ports:
        - name: "9090"
          port: 9090
          targetPort: 9090
    selector:
        io.kompose.service: demo-api
