K8/logging-service-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        io.kompose.service: logging-service
    name: logging-service
spec:
    ports:
        - name: '8088'
          port: 8088
          targetPort: 8088
    selector:
        io.kompose.service: logging-service
