K8/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        io.kompose.service: rabbitmq
    name: rabbitmq
spec:
    ports:
        - name: "5672"
          port: 5672
          targetPort: 5672
        - name: "15672"
          port: 15672
          targetPort: 15672
        - name: "1883"
          port: 1883
          targetPort: 1883
    selector:
        io.kompose.service: rabbitmq
