K8/song-meta-service-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        io.kompose.service: song-meta-service
    name: song-meta-service
spec:
    ports:
        - name: '8087'
          port: 8087
          targetPort: 8087
    selector:
        io.kompose.service: song-meta-service
