K8/song-service-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        io.kompose.service: song-service
    name: song-service
spec:
    ports:
        - name: "9091"
          port: 9091
          targetPort: 9091
    selector:
        io.kompose.service: song-service
