K8/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: gateway-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  - path: /gateway(/|$)(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: gateway
                            port:
                                number: 8085
